Rearranged recording and transcript headings

--- a/index.html
+++ b/index.html
@@ -41,128 +41,114 @@ title: "Home"
     </div>
   </section>
 
-  <section id="Recordings">
+  <section id="Recordings and Transcripts">
 
-    <h2 class="lead fw-bold">Session Recordings</h2>
-    <ul class="no-bullet-list">
-
-      <li>
-	<a target="_blank" href="https://www.youtube.com/playlist?list=PLCPZgcYzVpj_WHHCTUpec8THYEMzXZnR1">
-	  Full Event Playlist
-	</a>
-      </li>
-
-
-      <li>
-	<a target="_blank" href="">
-
-	</a>
-
-      </li>
-
-      <li>
-	<a target="_blank" href="">
-
-	</a>
-
-      </li>
-
+    <h2 class="lead fw-bold">
+      Session #1: Introduction
+      </h2>
+      <ul>
       <li>
 	<a target="_blank" href="https://www.youtube.com/watch?v=9ELaUM1fRNc&list=PLCPZgcYzVpj_WHHCTUpec8THYEMzXZnR1&index=1">
-	  Session #1: Introduction
+	  Recording
 	</a>
       </li>
 
-      <li>
-	<a target="_blank" href="https://www.youtube.com/watch?v=Cmvh_nZoqM8&list=PLCPZgcYzVpj_WHHCTUpec8THYEMzXZnR1&index=2">
-	  Session #2: Notebooks for All
-	</a>
-      </li>
-
-      <li>
-	<a target="_blank" href="https://www.youtube.com/watch?v=Xpka7pDl2fI&list=PLCPZgcYzVpj_WHHCTUpec8THYEMzXZnR1&index=3">
-	  Session #3: Illuminating the Universe with Accessible Text Descriptions
-	</a>
-      </li>
-
-      <li>
-	<a target="_blank" href="https://www.youtube.com/watch?v=pR29v4-J6i0&list=PLCPZgcYzVpj_WHHCTUpec8THYEMzXZnR1&index=4">
-	  Session #4: Keynote by Joshua Miele
-	</a>
-      </li>
-
-      <li>
-	<a target="_blank" href="https://www.youtube.com/watch?v=-MBpGKoULyc&list=PLCPZgcYzVpj_WHHCTUpec8THYEMzXZnR1&index=5">
-	  Session #5: Hearing the Light with Astronomy Data Sonification
-	</a>
-      </li>
-
-      <li>
-	<a target="_blank" href="https://www.youtube.com/watch?v=F189lurxSbs&list=PLCPZgcYzVpj_WHHCTUpec8THYEMzXZnR1&index=6&t=23s">
-	  Session #6: Learn to Use a Screen Reader
-	</a>
-      </li>
-
-
-  </section>
-
-
-  <section id="transcripts">
-
-    <h2 class="lead fw-bold">Transcriptions</h2>
-
-    <ul class="no-bullet-list">
       <li>
 	<a target="_blank" href="transcripts/intro.html">
-	  Session #1: Introduction
+	  Transcript
 	</a>
-
       </li>
+      </ul>
 
+    <h2 class="lead fw-bold">
+	  Session #2: Notebooks for All
+    </h2>
+    <ul>
+      <li>
+	<a target="_blank" href="https://www.youtube.com/watch?v=Cmvh_nZoqM8&list=PLCPZgcYzVpj_WHHCTUpec8THYEMzXZnR1&index=2">
+	  Recording
+	</a>
+      </li>
       <li>
 	<a target="_blank" href="transcripts/notebooks_for_all.html">
-	  Session #2: Notebooks for All
+	  Transcript
 	</a>
+	</li>
+    </ul>
 
+    <h2 class="lead fw-bold">
+      Session #3: Illuminating the Universe with Accessible Text Descriptions
+    </h2>
+    <ul>
+	<a target="_blank" href="https://www.youtube.com/watch?v=Xpka7pDl2fI&list=PLCPZgcYzVpj_WHHCTUpec8THYEMzXZnR1&index=3">
+	  Recording
+	</a>
       </li>
-
       <li>
 	<a target="_blank" href="transcripts/illuminating.html">
-	  Session #3: Illuminating the Universe with Accessible Text Descriptions
+	  Transcript
 	</a>
-
       </li>
+      </ul>
 
+    <h2 class="lead fw-bold">
+      Session #4: Keynote by Joshua Miele
+    </h2>
+    <ul>
+      <li>
+	<a target="_blank" href="https://www.youtube.com/watch?v=pR29v4-J6i0&list=PLCPZgcYzVpj_WHHCTUpec8THYEMzXZnR1&index=4">
+	  Recording
+	</a>
+      </li>
       <li>
 	<a target="_blank" href="transcripts/joshua_miele.html">
-	  Session #4: Keynote by Joshua Miele
+	  Transcript
 
 	</a>
-
       </li>
+      </ul>
 
+    <h2 class="lead fw-bold">
+	  Session #5: Hearing the Light with Astronomy Data Sonification
+    </h2>
+    <ul>
+      <li>
+	<a target="_blank" href="https://www.youtube.com/watch?v=-MBpGKoULyc&list=PLCPZgcYzVpj_WHHCTUpec8THYEMzXZnR1&index=5">
+	  Recording
+	</a>
+      </li>
       <li>
 	<a target="_blank" href="transcripts/hearing_light.html">
-	  Session #5: Hearing the Light with Astronomy Data Sonification
+	  Transcript
 	</a>
 
       </li>
+    </ul>
 
+
+    <h2 class="lead fw-bold">
+	  Session #6: Learn to Use a Screen Reader
+
+    </h2>
+    <ul>
+      <li>
+	<a target="_blank" href="https://www.youtube.com/watch?v=F189lurxSbs&list=PLCPZgcYzVpj_WHHCTUpec8THYEMzXZnR1&index=6&t=23s">
+	  Recording
+	</a>
+      </li>
       <li>
 	<a target="_blank" href="transcripts/screen_reader.html">
-	  Session #6: Learn to Use a Screen Reader
+	  Transcript
 	</a>
 
       </li>
+    </ul>
 
   </section>
-
 
 
 
   <section id="description">
-
-
 
     <h2 class="lead fw-bold">Event Description</h2>
 
