Added slide links to top

--- a/index.html
+++ b/index.html
@@ -43,6 +43,12 @@ title: "Home"
 
   <section id="Recordings and Transcripts">
 
+    <h2 style="margin-bottom:1.5em" class="lead fw-bold">
+      <a target="_blank" href="https://www.youtube.com/playlist?list=PLCPZgcYzVpj_WHHCTUpec8THYEMzXZnR1">
+	Full Event Recordings Playlist
+      </a>
+      </h2>
+
     <h2 class="lead fw-bold">
       Session #1: Introduction
       </h2>
@@ -58,6 +64,12 @@ title: "Home"
 	  Transcript
 	</a>
       </li>
+      <li>
+	<a target="_blank" href="https://drive.google.com/file/d/1yhZCBYDeXnuJ4a8c1QSuFBixB_Kt3xvT/view?usp=sharing">
+	  Presentation
+	</a>
+      </li>
+
       </ul>
 
     <h2 class="lead fw-bold">
@@ -73,7 +85,14 @@ title: "Home"
 	<a target="_blank" href="transcripts/notebooks_for_all.html">
 	  Transcript
 	</a>
-	</li>
+      </li>
+      <li>
+	<a target="_blank" href="https://hackmd.io/@tonyfast/H1WSPG9l3"">
+	  Presentation
+	</a>
+      </li>
+
+
     </ul>
 
     <h2 class="lead fw-bold">
@@ -87,6 +106,12 @@ title: "Home"
       <li>
 	<a target="_blank" href="transcripts/illuminating.html">
 	  Transcript
+	</a>
+      </li>
+
+	    <li>
+	<a target="_blank" href="https://docs.google.com/presentation/d/1G39l9JnGd3BPSC65sCygE8o0AEFlpvSz/edit?usp=sharing&ouid=108089663147503115220&rtpof=true&sd=true">
+	  Presentation
 	</a>
       </li>
       </ul>
@@ -123,6 +148,12 @@ title: "Home"
 	</a>
 
       </li>
+
+	    <li>
+	<a target="_blank" href="https://docs.google.com/presentation/d/14WW15bYfS8i_8tZMzcM0wA1qw7W48tei/edit?usp=sharing&ouid=108089663147503115220&rtpof=true&sd=true">
+	  Presentation
+	</a>
+      </li>
     </ul>
 
 
@@ -141,6 +172,11 @@ title: "Home"
 	  Transcript
 	</a>
 
+      </li>
+	    <li>
+	<a target="_blank" href="https://iotaschool.com/resource/sequence/u/patrick/s/screen-reader-fundamentals-with-voiceover-on-ios">
+	  Presentation
+	</a>
       </li>
     </ul>
 
