Updated README, hosting orgs

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@ title: "Home"
 
 
 	  <p class="lead">
-	    Workshop series hosted by Pandas and NumFOCUS
+	    Workshop series hosted by Pandas, NumFOCUS, and Iota
 	  </p>
 	  <p class="lead">
 	    Weekly from Tuesday, February 6th to Tuesday, March 5th
