Updated email addresses

--- a/index.html
+++ b/index.html
@@ -62,8 +62,6 @@ title: "Home"
       This series is generously supported by a small development grant provided by Pandas and NumFOCUS.
     </p>      
 
-]=
-
     <h2 class="lead fw-bold">Event Recording</h2>
 
     <p>
@@ -174,6 +172,6 @@ The Astronify Python package is intended for the sonification of light curve dat
   <section>
 
     <h2 class="display-6 fw-bold lh-1 mb-3">Contact</h2>
-    For questions about the event, please reach out to Patrick Smyth at patrick@iotaschool.com or Sarah Kane at sgkane@sas.upenn.edu.
+    For questions about the event, please reach out to Patrick Smyth at patrick@iotaschool.com or Sarah Kane at sgk27@cam.ac.uk.
 
     </div>
