Changed site title and baseurl, plus site heading

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@ title: "Home"
 	</div>
 	<div style="padding:0" class="col-lg-8">
 	  <h1 class="display-5 fw-bold lh-1 mb-3">
-	    Nonvisual Data Science
+	    Nonvisual Data Science Workshop Series
 	  </h1>
 
 
