Update for typos and format

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@ title: "Home"
 	  <p class="lead">
 	    Free and open to the public. Registration required. Seats may be limited. Recordings will be provided to all registrants.
 	  </p>
-	  <p>
+	  <p class="lead">
 	    Workshops will be hosted on Zoom. A Windows desktop or laptop is required. The NVDA screen reader will be used during the workshops.
 	  </p>
 	  <div class="d-grid gap-2 d-md-flex justify-content-md-start">
@@ -53,8 +53,7 @@ title: "Home"
 
     <h2 class="lead fw-bold">Background</h2>    
     <p>
-      Many introductions to data science focus on creating visual representations. However, while visualizations may initially seem essential when working with data, data is better thought of as inherently spatial rather than inherently visual. While visualizations such as maps and charts are the most common way to represent spatial representations, spatial relationships can also be represented in sound (sonification), feel (tactile graphics), or plain text (tables or natural language. . 
-    </p>
+      Many introductions to data science focus on creating visual representations. However, while visualizations may initially seem essential when working with data, data is better thought of as inherently spatial rather than inherently visual. While visualizations such as maps and charts are the most common way to represent spatial representations, spatial relationships can also be represented in sound (sonification), feel (tactile graphics), or plain text (tables or natural language.    </p>
     <p>
       Outside of the focus on creating visualizations, tooling is also a major pain point for blind individuals who want to get started with data science. Common environments, such as Jupyter Notebooks, are not currently accessible using screen readers. This workshop series will primarily use a command line environment in conjunction with the NVDA screen reader. Participants will use the IPython interpreter for Python to access data science libraries such as Pandas and Astronify.
     </p>      
@@ -101,7 +100,7 @@ This initial workshop will focus on accessing the command line environment and I
 	<tr>
 	  <td>February 13th, 2024</td>
 	  <td>
-	    Talking to your Data: Querying pandas DataFrames
+	    Talking To Your Data: Querying Pandas DataFrames
 	  </td>
 	  <td>
 	    In this workshop, participants will read a provided data set into a pandas DataFrame and learn how to query the data to answer questions. The workshop will cover pandas fundamentals such as Series and DataFrame objects, commonly used methods, accessing columns, and indexing. The workshop will emphasize returning results that are not overwhelming for screen reader users, focusing on methods that allow collapsing or limiting output.
@@ -122,7 +121,7 @@ This initial workshop will focus on accessing the command line environment and I
 	</tr>
 	<tr>
 	  <td>February 27th, 2024</td>
-	  <td>Sonification I: Principles of Sonification<</td>
+	  <td>Sonification I: Principles of Sonification</td>
 	  <td>
 	    This workshop will cover the fundamental principles of sonification, including the definition of sonification, existing use cases, the most common sonification methods, parameter mapping, and audifications. This workshop will also introduce the astronify library for sonifying astronomical data developed at Space Telescope Science Institute.
 	  </td>
