--- a/index.html
+++ b/index.html
@@ -159,7 +159,7 @@ The Astronify Python package is intended for the sonification of light curve dat
 	<div class="col-md-6">
 	  <h2 class="display-6 fw-bold lh-1 mb-3">About Iota</h2>
 	  <p>
-	    Iota is a consultency that leverages connections between research and industry and the open source community to advocate, innovate, and inspire. <a href="https://iotaschool.com/">Read more</a>
+	    Iota is a consultancy that leverages connections between research and industry and the open source community to advocate, innovate, and inspire. <a href="https://iotaschool.com/">Read more</a>
 	  </p>
 
 	</div>
