--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@ title: "Home"
 	    Workshops will be hosted on Zoom. A Windows desktop or laptop is required. The NVDA screen reader will be used during the workshops.
 	  </p>
 	  <div class="d-grid gap-2 d-md-flex justify-content-md-start">
-	    <a target="_blank" href="https://forms.gle/u8hEcUvJqeFNy9CT8"><button type="button" class="btn btn-primary btn-lg px-4 me-md-2">Sign up</button></a>
+	    <a target="_blank" href="https://forms.gle/u8hEcUvJqeFNy9CT8"><button type="button" class="btn btn-primary btn-lg px-4 me-md-2">Sign Up</button></a>
 	    <a href="#schedule"><button type="button" class="btn btn-outline-secondary btn-lg px-4">View Schedule</button></a>
 	  </div>
 	</div>
