--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@ title: "Home"
 
     <h2 class="lead fw-bold">Background</h2>    
     <p>
-      Many introductions to data science focus on creating visual representations. However, while visualizations may initially seem essential when working with data, data is better thought of as inherently spatial rather than inherently visual. While visualizations such as maps and charts are the most common way to represent spatial representations, spatial relationships can also be represented in sound (sonification), feel (tactile graphics), or plain text (tables or natural language.    </p>
+      Many introductions to data science focus on creating visual representations. However, while visualizations may initially seem essential when working with data, data is better thought of as inherently spatial rather than inherently visual. While visualizations such as maps and charts are the most common way to represent spatial representations, spatial relationships can also be represented in sound (sonification), feel (tactile graphics), or plain text (tables or natural language).    </p>
     <p>
       Outside of the focus on creating visualizations, tooling is also a major pain point for blind individuals who want to get started with data science. Common environments, such as Jupyter Notebooks, are not currently accessible using screen readers. This workshop series will primarily use a command line environment in conjunction with the NVDA screen reader. Participants will use the IPython interpreter for Python to access data science libraries such as Pandas and Astronify.
     </p>      
