--- a/index.html
+++ b/index.html
@@ -43,7 +43,23 @@ title: "Home"
     </div>
   </section>
 
-  <section id="Recordings and Transcripts">
+  <section>
+  <h2 class="lead fw-bold">
+    Event Links
+  </h2>
+
+  <ul>
+    <li><a href="https://zoom.us/j/93168160643?pwd=d1hiVWI3SmlMc2MxczBBbkxBKzlmZz09#success">Zoom Link</a></li>
+    <li><a href=https://calendar.google.com/calendar/event?action=TEMPLATE&tmeid=cG5uMGYzcG9jazVpaW1kNGRhbTFibnE2MWtfMjAyNDAyMDZUMTgwMDAwWiBwYXRyaWNrc215dGgwMUBt&tmsrc=patricksmyth01%40gmail.com&scp=ALL">Add Workshops to Google Calendar</a></li>
+    <li><a href="welcome.html">Welcome Email (with Installation Instructions)</a></li>
+    <li><a href="update.html">Update Email (with Information on Office Hours)</a></li>
+    </ul>
+  </section>
+
+
+  <section>
+
+
 
     <h2 class="lead fw-bold">Event Description</h2>
 
