Added buttons to go to curriculum / recordings

--- a/index.html
+++ b/index.html
@@ -54,6 +54,20 @@ title: "Home"
     <li><a href="welcome.html">Welcome Email (with Installation Instructions)</a></li>
     <li><a href="update.html">Update Email (with Information on Office Hours)</a></li>
     </ul>
+
+  <h2 class="lead fw-bold">
+    Recordings
+  </h2>
+
+  <ul>
+    <li><a href="https://www.youtube.com/playlist?list=PLoOee19aArh0Lvu8O2Mgbg56sJBdkAClw">Full Workshop Series Playlist</a></li>
+    <li><a href="https://www.youtube.com/watch?v=TenQgvGmrlE&list=PLoOee19aArh0Lvu8O2Mgbg56sJBdkAClw&index=1&t=3173s">Workshop #1: Nonvisual Python Recording</a></li>
+  <li><a href="https://www.youtube.com/watch?v=MseEehcEbe4&list=PLoOee19aArh0Lvu8O2Mgbg56sJBdkAClw&index=2&t=20s">Workshop #2: Data Science Fundamentals in Pandas Recording</a></li>
+  </ul>
+
+
+
+
   </section>
 
 
@@ -101,6 +115,7 @@ title: "Home"
 	  <th scope="col">Date</th>
 	  <th scope="col">Session</th>
 	  <th scope="col">Description</th>
+	  <th scope="col">Links</th>
 	</tr>
       </thead>
       <tbody>
@@ -112,6 +127,11 @@ title: "Home"
 	  <td>
 This initial workshop will focus on accessing the command line environment and IPython with the NVDA screen reader. NVDA is chosen because it is a commonly used, free-of-cost and open source screen reader. The workshop will cover opening the terminal, accessing IPython, learning common Python types and objects, and using introspection functions. The workshop will culminate by importing pandas.
 	  </td>
+	  <td>
+	    <ul>
+	      <li><a class="btn btn-primary" aria-label="Workshop #1 Recording" href="https://www.youtube.com/watch?v=TenQgvGmrlE&list=PLoOee19aArh0Lvu8O2Mgbg56sJBdkAClw&index=1&t=3173s">Recording</a></li>
+	      <li><a class="btn btn-info" aria-label="Workshop #1 Curriculum" href="https://github.com/Iota-School/nonvisual_data_science/blob/main/pandas_fundamentals/README.md">Curriculum</a></li>
+	      </ul>
 	</tr>
 	<tr>
 	  <td>February 13th, 2024</td>
@@ -121,6 +141,12 @@ This initial workshop will focus on accessing the command line environment and I
 	  <td>
 	    In this workshop, participants will read a provided data set into a pandas DataFrame and learn how to query the data to answer questions. The workshop will cover pandas fundamentals such as Series and DataFrame objects, commonly used methods, accessing columns, and indexing. The workshop will emphasize returning results that are not overwhelming for screen reader users, focusing on methods that allow collapsing or limiting output.
 	  </td>
+	  <td>
+	    <ul>
+	      <li><a class="btn btn-primary" aria-label="Workshop #2 Recording" href="https://www.youtube.com/watch?v=MseEehcEbe4&list=PLoOee19aArh0Lvu8O2Mgbg56sJBdkAClw&index=2&t=20s">Recording</a></li>
+	      <li><a class="btn btn-info" aria-label="Workshop #2 Curriculum" href=""https://github.com/Iota-School/nonvisual_data_science/blob/main/pandas_fundamentals/README.md">Curriculum</a></li>
+	    </ul>
+	    
 	</tr>
 	<tr>
 	  <td>
