Added id for transcripts

--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@ title: "Home"
   </section>
 
 
-  <section>
+  <section id="transcripts">
 
 
     <h2 class="lead fw-bold">
@@ -81,7 +81,7 @@ title: "Home"
 
     <h3> Workshop #1</h3>
 
-    <li><a href="transcripts/workshop_1/transcript.csv">CSV</a></li>
+    <li><a class ="btn" href="transcripts/workshop_1/transcript.csv">CSV</a></li>
     <li><a href="transcripts/workshop_1/transcript.docx">DOCX</a></li>
     <li><a href="transcripts/workshop_1/transcript.pdf">PDF</a></li>
     <li><a href="transcripts/workshop_1/transcript.srt">SRT</a></li>
@@ -124,8 +124,8 @@ title: "Home"
     <li><a href="transcripts/workshop_5/transcript.txt">TXT</a></li>
     <li><a href="transcripts/workshop_5/transcript.vtt">VTT</a></li>
 
-
-
+    </section>
+    <section>
 
 
     <h2 class="lead fw-bold">
@@ -136,6 +136,9 @@ title: "Home"
       <li><a href="https://lists.blindcoders.com/postorius/lists/datascience.blindcoders.com/">Blind Data Science Mailing List</a></li>
       <li><a href="https://github.com/Iota-School/nonvisual_data_science/blob/main/resources.md">List of Resources for Nonvisual Data Science</a></li>
     </ul>
+    </section>
+    <section>
+      
     
 
     <h2 class="lead fw-bold">Event Description</h2>
@@ -143,6 +146,9 @@ title: "Home"
     <p>
       This five-workshop series teaches the fundamentals of data analysis and sonification using nonvisual tools and technologies. The workshops are designed for those who are blind, low vision, or who otherwise have difficulty accessing visual tools for data science. The workshops cover some basics of the Python programming language, an introduction to the Pandas data science library, working interactively to explore data, preparing a data set for sonification, and using sonification to represent data. The workshop series uses the NVDA screen reader on Windows, and will be taught by blind / low vision practitioners. No prior experience with Python or data science is needed, but some familiarity with Windows and NVDA will be helpful.
     </p>
+
+    </section>
+    <section>
 
     <h2 class="lead fw-bold">Background</h2>    
     <p>
@@ -153,6 +159,9 @@ title: "Home"
     <p>
       This series is generously supported by a small development grant provided by Pandas and NumFOCUS.
     </p>      
+
+  </section>
+  <section>
 
     <h2 class="lead fw-bold">Event Recording</h2>
 
